# technical-test

./: .gitignore  Makefile  README.md  pyproject.toml  test-line.txt  test-table.txt
.github/workflows/: test.yml
spark/: command.py  format.py  loader.py  main.py  model.py  operation.py  processor.py  serializer.py
tests/: test_main.py
tests/func/: test_func_processor.py
tests/ut/: test_ut_format.py  test_ut_loader.py  test_ut_operation.py  test_ut_serializer.py
