[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Pierre-Henri <phbasic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
requests = "^2.32.3"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
